making a map function work